<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/firstnameField"
            android:hint="@string/firstname_hint"
            android:inputType="text"
            android:textColor="@color/common_google_signin_btn_text_light_default"
            android:textColorHighlight="@color/myorange"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/secondnameField"
            android:hint="@string/secondname_hint"
            android:inputType="text"
            android:textColor="@color/common_google_signin_btn_text_light_default"
            android:textColorHighlight="@color/myorange"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/lastnameField"
            android:hint="@string/lastname_hint"
            android:inputType="text"
            android:textColor="@color/common_google_signin_btn_text_light_default"
            android:textColorHighlight="@color/myorange"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/jobField"
            android:hint="@string/job_hint"
            android:inputType="text"
            android:textColor="@color/common_google_signin_btn_text_light_default"
            android:textColorHighlight="@color/myorange"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/common_google_signin_btn_text_light_default"
            android:textColorHighlight="@color/myorange"
            android:textSize="20sp"
            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/common_google_signin_btn_text_light_default"
            android:textColorHighlight="@color/myorange"
            android:textSize="20sp"
            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true" />


    </LinearLayout>

</androidx.cardview.widget.CardView>